After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708732 - avvidenc: Don't fail configuring codec if framerate is unknown
avvidenc: Don't fail configuring codec if framerate is unknown
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-libav
1.x
Other Linux
: Normal normal
: 1.2.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-25 10:56 UTC by Alexander Leshchenko
Modified: 2013-10-04 11:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Vieo stream sample (712.71 KB, text/vnd.trolltech.linguist)
2013-09-25 10:56 UTC, Alexander Leshchenko
Details

Description Alexander Leshchenko 2013-09-25 10:56:27 UTC
Created attachment 255671 [details]
Vieo stream sample

Pipeline stops with negotiation problem. Debug show message:

gst_video_encoder_setcaps:<avenc_flv0> rejected caps video/x-raw, format=(string)I420, width=(int)1280, height=(int)720, pixel-aspect-ratio=(fraction)1/1, interlace-mode=(string)progressive, colorimetry=(string)bt709, framerate=(fraction)0/1

I try to convert with this:
  gst-launch-1.0 filesrc location=h264.ts ! decodebin ! videoconvert ! avenc_flv ! flvmux ! filesink location=test.flv

Attached sample works fine in 0.10. Perhaps the problem is from an unknown frame rate?
Comment 1 Sebastian Dröge (slomo) 2013-10-01 20:39:30 UTC
commit 9becd72b604c6b7ff5568121d19943ea2ea6c481
Author: Sebastian Dröge <slomo@circular-chaos.org>
Date:   Tue Oct 1 22:38:32 2013 +0200

    avenc: Choose 25 fps if we don't have any in the caps
    
    Some encoders require a non-zero framerate to be configured properly
    and just choosing something will make them not fail completely at
    least.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=708732